--- a/background.html
+++ b/background.html
@@ -8,7 +8,7 @@
     body {
         margin: 0;
         height: 100vh;
-        background: linear-gradient(135deg, #0a0f1f, #251c2b, #0a0f1f); /* تم إضافة لمسة وردية/بنفسجية خفيفة */
+        background: linear-gradient(135deg, #0a0f1f, #251c2b, #0a0f1f); 
         color: white;
         display: flex;
         justify-content: center;
@@ -31,7 +31,7 @@
         to { background-position: 100px 100px; }
     }
 
-    /* إيقاف الأنيميشن على الشاشات الصغيرة لتحسين الأداء */
+   
     @media (max-width: 768px) {
         .bg-dots {
             animation: none;
@@ -78,4 +78,5 @@
 
 </body>
 </html>
+
    
